# esp32c3-rust-std-temperature-logger

./: Cargo.toml  README.md
.cargo/: config.toml
src/: bmp180.rs  main.rs
